Add simple color scheme for dark mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 :root {
+	color-scheme: light dark;
 	--msg-color: blue;
     --bg-color: powderblue;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+		--msg-color: red;
+	    --bg-color: black;
+	}
 }
 
 body {
